fixes sizes, spacing, and colouring

--- a/components/vf-banner/vf-banner--alerts.scss
+++ b/components/vf-banner/vf-banner--alerts.scss
@@ -1,6 +1,7 @@
 .vf-banner--alert {
   .vf-banner__content {
     display: flex;
+    align-items: center;
   }
   .vf-banner__text,
   [class*='vf-text'] {
@@ -26,7 +27,7 @@
 
 .vf-banner--info {
   background-color: set-ui-color(vf-ui-color--yellow);
-  color: set-color(vf-color--grey--dark);
+  color: set-color(vf-color--grey--darkest);
 }
 
 
@@ -37,12 +38,13 @@
 
 
 .vf-banner__button {
+  display: inherit;
   margin-left: auto;
-  padding: 2px 6px 4px;
 
   svg {
     fill: currentColor;
-    height: 14px;
+    height: .75rem;
+    width: .75rem;
   }
 
   &:focus {
